# cyclosim

./: .gitignore  AGENTS.md  Cargo.toml  README.md  STRAVA.md  VeloSim-Roadmap.md  VeloSim-Technical-Plan.md  justfile
.cursor/rules/: github-workflow.mdc  no-tool-branding.mdc
.cursor/skills/liquid-glass/: SKILL.md  reference.md
.cursor/skills/quality-pass/: SKILL.md
.cursor/skills/rust-best-practices/: SKILL.md  reference.md
.cursor/skills/swift-best-practices/: SKILL.md  reference.md
.cursor/skills/velo-ui-parity/: SKILL.md  reference.md
.githooks/: commit-msg  prepare-commit-msg
.github/: pull_request_template.md
.github/workflows/: ci.yml
crates/velo-bikegen/: Cargo.toml  README.md
crates/velo-bikegen/src/: asset.rs  credentials.rs  lib.rs  library.rs  placeholder.rs
crates/velo-bikegen/tests/: integration.rs
crates/velo-cesium/: Cargo.toml  README.md  build.rs
crates/velo-cesium/cpp/: bridge.cpp  bridge.h
crates/velo-cesium/src/: attribution.rs  bridge.rs  credentials.rs  gltf.rs  lib.rs  mesh.rs  policy.rs  session.rs  synthetic.rs  tileset.rs
crates/velo-cesium/tests/: integration.rs
crates/velo-core/: Cargo.toml  README.md
crates/velo-core/src/: app.rs  audio.rs  highlight.rs  lib.rs  packs.rs  physics.rs  ride.rs  ride_session.rs  route.rs  steering.rs  workout.rs  zwo.rs
crates/velo-core/tests/: audio_segment.rs  golden_replay.rs  highlight_clips.rs  route_import_scenario.rs  route_ride.rs  scenarios.rs  steering_audio.rs  steering_golden.rs  workout_erg.rs  zwo_import.rs
crates/velo-core/tests/scenarios/: ride_lifecycle.rs
crates/velo-ffi/: Cargo.toml  README.md
crates/velo-ffi/src/: lib.rs
crates/velo-ffi/tests/: app_scenarios.rs  bike_integration.rs  callback_round_trip.rs  ride_library_integration.rs  route_import_integration.rs  secrets_integration.rs  steering_audio_integration.rs  tiles_integration.rs  workout_integration.rs
crates/velo-ffi/tests/common/: mod.rs
crates/velo-fit/: Cargo.toml  README.md
crates/velo-fit/src/: crc.rs  encode.rs  lib.rs  types.rs  writer.rs
crates/velo-fit/tests/: integration.rs
crates/velo-fit/tests/fixtures/: golden_short.fit
crates/velo-platform/: Cargo.toml  README.md
crates/velo-platform/src/: lib.rs
crates/velo-render/: Cargo.toml  README.md
crates/velo-render/src/: bike.rs  capture.rs  hud.rs  lib.rs  scene.rs  terrain.rs  tiles.rs
crates/velo-render/src/shaders/: scene.wgsl  terrain.wgsl  tiles.wgsl
crates/velo-rides/: Cargo.toml  README.md
crates/velo-rides/src/: error.rs  lib.rs  schema.rs  store.rs
crates/velo-rides/tests/: edge_cases.rs  fit_artifacts_integration.rs  insert_query.rs  migration.rs  schema.rs
crates/velo-rides/tests/common/: mod.rs
crates/velo-route-import/: Cargo.toml  README.md
crates/velo-route-import/src/: elevation.rs  gpx.rs  grade.rs  lib.rs  resample.rs  tcx.rs
crates/velo-route-import/tests/: gpx_import.rs
crates/velo-route-import/tests/fixtures/: simple_climb.gpx
crates/velo-terrain/: Cargo.toml  README.md
crates/velo-terrain/src/: heightfield.rs  lib.rs  mesh.rs  pack.rs  synthetic.rs
crates/velo-terrain/tests/: synthetic_bake.rs
crates/velo-units/: Cargo.toml  README.md
crates/velo-units/src/: lib.rs
docs/: HEADLESS_TESTING.md  QUALITY_PASS.md  UI_PARITY_P2_PLAN.md  UI_PARITY_PLAN.md  VeloSim-UI-and-Zwift-Parity-Guide.md
scripts/: build.sh  create-milestone-issues.sh  git-commit-clean.sh  install-git-hooks.sh  lint-apple-symbols.sh  lint-shell-ui.sh
shell-macos/: Info.plist  Package.swift  README.md  StravaConfig.example.plist
shell-macos/Bridge/include/: module.modulemap  velo_ffiFFI.h  velo_ffiFFI.modulemap
shell-macos/Sources/VeloSim/: AppSecretsStore.swift  AppSettingsStore.swift  ConnectionWizardStep.swift  ContentView.swift  PlatformCallbacks.swift  SettingsApplyLogic.swift  TelemetrySamplePoll.swift  VeloSimApp.swift  VeloSimModel.swift  WorkoutBuilderView.swift
shell-macos/Sources/VeloSim/BLE/: FTMSBridge.swift  ReplaySensorSource.swift
shell-macos/Sources/VeloSim/Input/: SteeringInput.swift
shell-macos/Sources/VeloSim/Music/: SegmentMusicSearch.swift  VeloMusicDirector.swift
shell-macos/Sources/VeloSim/Ride/: ActivityPublisher.swift  FrameRingBuffer.swift  HighlightClipEncoder.swift  LocalRideStore.swift  PngEncoder.swift
shell-macos/Sources/VeloSim/Strava/: StravaAuthCoordinator.swift  StravaConfig.swift  StravaOAuth.swift  StravaTokenStore.swift  StravaUploader.swift
shell-macos/Sources/VeloSim/UI/: ActivitiesView.swift  AppNavigation.swift  DashboardView.swift  PreRideSetupSheet.swift  RideHUDFormatting.swift  RideHUDOverlay.swift  RideSummaryFormatting.swift  RideSummarySheet.swift  RideView.swift  SettingsView.swift  SetupChromeView.swift  VeloGlass.swift
shell-macos/Sources/VeloSim/UI/Components/: HUDSurface.swift  VeloGlass.swift
shell-macos/Sources/VeloSim/UI/Design/: PowerZone.swift  Tok.swift  Typo.swift
shell-macos/Sources/VeloSim/UI/HUD/: FTPTestEngine.swift  HUDCoordinator.swift  HUDModel.swift  RideControls.swift  RideHUDFormatting.swift  RideHUDOverlay.swift
shell-macos/Sources/VeloSim/UI/Screens/: ActivitiesCatalogView.swift  AppShellView.swift  DashboardView.swift  FTPTestViews.swift  MetalRideView.swift  PairingView.swift  ParityHelpers.swift  PreRidePanel.swift  QuickStartRow.swift  (+6 more)
shell-macos/Sources/VeloSim/Workout/: WorkoutBuilderInterval.swift
shell-macos/Sources/VeloSimBLE/: FTMSProtocol.swift
shell-macos/Tests/VeloSimTests/: AppScenarioTests.swift  AppSecretsStoreTests.swift  AppSettingsStoreTests.swift  AppShellTests.swift  ConnectionWizardTests.swift  FTMSParserTests.swift  HUDCoordinatorTests.swift  HighlightClipEncoderTests.swift  MockTrainerControl.swift  MockURLProtocol.swift  PowerZoneTests.swift  RideFlowTests.swift  RideHUDFormattingTests.swift  RideHistoryStoreTests.swift  RideLibraryTests.swift  RideSummaryFormattingTests.swift  ScreenshotTests.swift  SegmentMusicSearchTests.swift  SettingsApplyLogicTests.swift  SteeringInputTests.swift  StravaOAuthTests.swift  StravaUploadTests.swift  TelemetrySamplePollTests.swift
(+12 files in other folders)
