[package]
name = "velo-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UniFFI surface exposing VeloSim core to Swift"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "velo_ffi"

[dependencies]
uniffi = { workspace = true }
thiserror = { workspace = true }
velo-core = { workspace = true }
velo-platform = { workspace = true }
velo-render = { workspace = true }
velo-rides = { workspace = true }
velo-route-import = { workspace = true }
velo-terrain = { workspace = true }
velo-cesium = { workspace = true }
velo-bikegen = { workspace = true }
velo-units = { workspace = true }

[dev-dependencies]
tempfile = "3"
png = { workspace = true }
fitparser = "0.8"
velo-route-import = { workspace = true }
velo-terrain = { workspace = true }

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
