[package]
name = "velo-render"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "wgpu renderer for VeloSim"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
glam = { workspace = true }
glyphon = "0.8"
thiserror = { workspace = true }
velo-core = { workspace = true }
velo-terrain = { workspace = true }
wgpu = "24"
pollster = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
raw-window-handle = "0.6"
