[package]
name = "velo-rides"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQLite ride library catalog for VeloSim"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = { workspace = true }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
